@@ -32,7 +32,7 @@ end
 
 When /^I wait for existence of an element$/ do
   @main_window.get(:id => "wait_for_existence_button").click
-  @suddenly_exists_button = @main_window.wait_for_existence_of(:name => "suddenly exists")
+  @suddenly_exists_button = @main_window.wait_for(:name => "suddenly exists")
 end
 
 Then /^the element that I waited for exists$/ do
