@@ -1,3 +1,6 @@
+v? - ?
+- added alias wait_for to use instead of the more cumbersome wait_for_existence_of
+
 v0.1.12 - 2011/4/26
 - fixing issue with wait_for_window sometimes not timing out - raised by mrwizard82d1
 - using (:how_many => :all) when getting elements will always return an array, even when no matching elements are found
